Completed Open & View only actions Refracted AuthController.java to use service layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,10 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.springframework.security=DEBUG
-#spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 #server.servlet.context-path=/everify
 #security.ignored=/**
 #--------------------------------------
