--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 #server.servlet.context-path=/everify
